# 2kanna

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api_nginx.conf  docker-compose.yml  nginx.conf  requirements.txt  setup.cfg
.github/workflows/: main.yml
frontend/: auth.js  cache.js  const.js  index.html  pagination.js  post.js  script.js  state.js  stream.html  style.css
src/twok/api/: __init__.py  config.py  dependencies.py
src/twok/api/routers/: board.py  post.py  search.py  test.json  user.py
src/twok/api/services/: auth.py
src/twok/database/: __init__.py  models.py  schemas.py  session.py
src/twok/database/crud/: __init__.py
src/twok/database/crud/table/: __init__.py  ban.py  board.py  file.py  post.py  requester.py  user.py
src/twok/files/: __init__.py
tests/: conftest.py
tests/api/: test_board.py  test_health.py  test_post.py  test_user.py
