[metadata]
name = twok
version = 0.0.1
description = tbd

[options]
packages = find_namespace:
install_requires =
    fastapi[all]>=0.95.0
    SQLAlchemy>=2.0.8
    PyMySQL>=1.0.2
    cryptography>=39.0.0
    python-jose[cryptography]
    passlib[bcrypt]
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[flake8]
ignore =
    # Line too long
    E501
max-line-length = 120